# QVocalWriter

./: .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/: CMakeCache.txt  cmake_install.cmake  qvocalwriter  qvocalwriter_qmltyperegistrations.cpp
_codeql_build_dir/.qt/: QtDeploySupport.cmake
_codeql_build_dir/.qt/deploy_qml_imports/: qvocalwriter.cmake
_codeql_build_dir/.qt_plugins/: Qt6_QmlPlugins_Imports_qvocalwriter.cmake  Qt6_QmlPlugins_Imports_qvocalwriter.rsp
_codeql_build_dir/.rcc/: qmake_QVocalWriter.qrc  qvocalwriter_raw_qml_0.qrc
_codeql_build_dir/.rcc/qmlcache/: qvocalwriter_qml_loader_file_list.rsp  qvocalwriter_qmlcache_loader.cpp
_codeql_build_dir/.rcc/qmlcache/qvocalwriter_qml/: Main_qml.cpp
_codeql_build_dir/QVocalWriter/: qmldir
_codeql_build_dir/qvocalwriter_autogen/: deps
cmake/: QvwFetch.cmake
include/qvw/: EngineBase.h  LlamaEngine.h  WhisperEngine.h  log_wrapper.h
qml/: AboutDlg.qml  ChatPane.qml  DownloadProgress.qml  Main.qml  MessagesView.qml  ModelPicker.qml  RecordingLevel.qml  RecordingPane.qml  TranscribePane.qml  TranslationPane.qml
qml/settings/: GeneralSettings.qml  SettingsDlg.qml  TranscribeSettings.qml
src/: AppEngine.cpp  AppEngine.h  AudioCaptureDevice.cpp  AudioCaptureDevice.h  AudioController.cpp  AudioController.h  AudioFileWriter.cpp  AudioFileWriter.h  AudioRecorder.cpp  AudioRecorder.h  AudioRingBuffer.h  ChunkQueue.cpp  ChunkQueue.h  Model.cpp  Model.h  ModelLocator.cpp  ModelLocator.h  ModelMgr.cpp  ModelMgr.h  Queue.h  ScopedTimer.h  Transcriber.cpp  Transcriber.h  TranscriberWhisper.cpp  TranscriberWhisper.h  WhisperInstance.cpp  WhisperInstance.h  logging.h  main.cpp
src/app/: AppEngine.cpp  AppEngine.h  AudioCaptureDevice.cpp  AudioCaptureDevice.h  AudioController.cpp  AudioController.h  AudioFileWriter.cpp  AudioImport.cpp  AudioImport.h  AudioRecorder.cpp  AudioRingBuffer.cpp  AudioRingBuffer.h  AvailableModelsModel.cpp  AvailableModelsModel.h  ChatConversation.cpp  ChatConversation.h  ChatMessagesModel.cpp  ChatMessagesModel.h  GeneralModel.cpp  GeneralModel.h  LanguagesModel.cpp  LanguagesModel.h  Model.cpp  Model.h  ModelInfo.cpp  ModelInfo.h  ModelMgr.cpp  ModelMgr.h  ModelState.h  Queue.h  RewriteStyleModel.cpp  RewriteStyleModel.h  Transcriber.cpp  Transcriber.h  TranscriberWhisper.cpp  TranscriberWhisper.h  WhisperInstance.cpp  WhisperInstance.h  logging.h  main.cpp
wrappers/llama/: CMakeLists.txt
wrappers/llama/src/: LlamaEngine.cpp
wrappers/whisper/: CMakeLists.txt  exports.map
wrappers/whisper/src/: WhisperCtx.cpp  WhisperEngine.cpp
